[package]
name = "ignore-result"
version = "0.2.0"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>", "NeoSmart Technologies <https://neosmart.net/>"]
edition = "2018"
description = "Adds a `Result<_, _>.ignore()` method to ignore the return value of a function call without panicking in case of error."
homepage = "https://neosmart.net/blog/2018/rust-ignore-result"
repository = "https://github.com/neosmart/ignore-result"
readme = "README.md"
keywords = ["result", "no_std", "ignore", "productivity"]
categories = ["no-std", "rust-patterns"]
license = "MIT"

[dependencies]
